[workspace]
members = [ "castelia-*" ]
resolver = "3"

[workspace.package]
name = "castelia"
edition = "2024"

[workspace.dependencies]
axum = "0.8.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
anyhow = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic       = "deny"
unwrap_used = "deny"
expect_used   = "warn"

todo          = "warn"
unimplemented = "warn"
unreachable   = "warn"

dbg_macro = "warn"
